Adicionei a barra de nave o link do index

--- a/imovel/imovel1.html
+++ b/imovel/imovel1.html
@@ -20,7 +20,7 @@
             <h1 id="nome">Carla Venancio <br> Corretora de imóveis</h1>
         </div>
         <nav class="opsbarra">
-            <a href="/home/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/imovel/imovel1.html">Imóveis</a>
             <!--<a href="#">Dúvidas frequentes</a>-->
             <a href="#contato">Entre em contato</a>
