--- a/paginamodelo/imovel-detalhe.html
+++ b/paginamodelo/imovel-detalhe.html
@@ -19,7 +19,7 @@
             <div id="nome">Carla Venancio <br> Corretora de imóveis</div>
         </div>
         <nav class="opsbarra">
-            <a href="/home/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/imovel/imovel1.html">Imóveis</a>
             <!--<a href="#">Dúvidas frequentes</a>-->
             <a href="#contato">Entre em contato</a>
