responsividade do site

--- a/imovel/imovel1.html
+++ b/imovel/imovel1.html
@@ -23,7 +23,7 @@
             <a href="/index.html">Home</a>
             <a href="/imovel/imovel1.html">Imóveis</a>
             <!--<a href="#">Dúvidas frequentes</a>-->
-            <a href="#contato">Entre em contato</a>
+            <a id="contato" href="#contato">Entre em contato</a>
         </nav>
     </header>
 
