--- a/paginamodelo/imovel-detalhe.html
+++ b/paginamodelo/imovel-detalhe.html
@@ -37,6 +37,9 @@
                 </section>
                 <section class="especificacoes">
                     <h2 id="imovel-titulo"></h2>
+                    <div class="preco-mobile">
+                        <p id="imovel-preco2"></p>
+                    </div>
                     <div id="specs-principais" class="specs-principais"></div>
                     
                     <h3>Descrição:</h3>
