--- a/imovel/imovel1.html
+++ b/imovel/imovel1.html
@@ -23,7 +23,10 @@
             <a href="/index.html">Home</a>
             <a href="/imovel/imovel1.html">Imóveis</a>
             <!--<a href="#">Dúvidas frequentes</a>-->
-            <a id="contato" href="#contato">Entre em contato</a>
+            <a href="#contato">
+                <span class="texto-completo">Entre em contato</span>
+                <span class="texto-curto">Contato</span>
+            </a>
         </nav>
     </header>
 
