--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                     <a href="">Home</a>
                     <a href="/imovel/imovel1.html">Imóveis</a>
                     <!--<a href="/duvidas/dica.html">Dúvidas frequentes</a>-->
-                    <a href="#contato">Entre em contato</a>
+                    <a href="#contato">
+                        <span class="texto-completo">Entre em contato</span>
+                        <span class="texto-curto">Contato</span>
+                    </a>
                 </div>
             </div>
         </nav>
