--- a/imovel/imovel1.html
+++ b/imovel/imovel1.html
@@ -100,7 +100,7 @@
         </aside>
 
         <main class="lista-imoveis">
-            
+             <div class="paginacao">
                 <span>&lt;&lt;</span>
                 <span class="ativo">1</span>
                 <span>2</span>
@@ -108,8 +108,9 @@
                 <span>...</span>
                 <span>7</span>
                 <span>&gt;&gt;</span>
+             </div>
         </main>
-        <div class="paginacao"></div>
+       
     </div>
 
     <div id="rodape-placeholder"></div>
